--- a/demo/src/pages/index.astro
+++ b/demo/src/pages/index.astro
@@ -20,5 +20,13 @@ import * as Component from '@example/my-component';
 	<body>
 		<Component.Heading>Welcome to Astro</Component.Heading>
 		<Component.Button>Plain Button</Component.Button>
+
+		<!-- builds and renders but hits a browser error -->
+		<Component.Counter client:load>
+			<h2>Hello, Counter</h2>
+		</Component.Counter>
+
+		<!-- fails to build -->
+		<Component.LazyCounter />
 	</body>
 </html>
